Changelog for Collage

    (name of developer listed in brackets)

* Renamed manage_page to compose_page to avoid ZMI filtering access problem
  [zegor]

* Added borders on manage_page to distinct rows, columns and items
  [zegor]

* Added "portlets" views
  [zegor]

* Rows, Colums and Aliases not indexed in portal_catalog
  [zegor]

* Do not display Aliases with insufficient privileges
  [zegor]
 
* Made the Collection item size matter, and added a More... button [regebro]

* Added content views for ATLink, ATFile and ATNewsItem
  [zegor]

* Fixed some i18n problems
  Added English and French po files
  Resynchronized po files with pot
  [zegor]

* Do not display share and properties tabs with Plone 3.0
  [zegor]

* Added .metadata to cache icons
  [zegor]

* Added delete-object view method to avoid redirection to confirmation_form
  [zegor]

* Refactored codebase
    Moved code out of ./browser/browser.py into separate files.

    New directory structure:

    ./browser/viewlets     viewlet templates
    ./browser/views        content view templates
    ./browser/templates    collage ui templates

    Zope 3 configuration files:

    configuration.zcml     collage ui and functionality
    views.zcml             content views
    actions.zcml           ui actions (insert, split etc.)
    viewlets.zcml          ui configuration
    
    [malthe]
    
* Nested headings properly
    Lets have a 'safe' structure:    
    <h1> title of the collage
    <h2> could be a row heading and / or object item
    http://www.w3.org/TR/1999/WAI-WEBCONTENT-19990505/#tech-logical-headings

    [pelle]
    

* Added HISTORY file
    Lets use this file again to log changes...

    [pelle]