@@ -5,12 +5,13 @@
      tal:omit-tag="">
 
   <form class="collage-existing-items"
+        onsubmit="return false"
 	tal:define="filter_portal_type request/portal_type|nothing"
 	tal:attributes="action string:${here/absolute_url}/existing-items-form">
     <div class="field">
       <label i18n:translate="label_content_type"
-	     for="portal_type">Content type</label><br />
-      <select name="portal_type"
+	     for="portal_type">Content type</label>
+      <select name="portal_type" style="font-size:80%"
 	      tal:define="allowedTypes here/getAllowedTypes">
 	<option i18n:translate="label_all_content_types"
 		value="">All</option>
@@ -22,7 +23,11 @@
 		tal:content="ctype/Title">Type-name</option>
       </select>
     </div>
-    
+    <div class="field">
+      <label i18n:domain="plone" i18n:translate="label_search_text"
+	     for="portal_type">Search Text</label>
+      <input type="text" name="SearchableText" tal:attributes="value request/SearchableText|nothing" />
+    </div>
     <ul i18n:domain="plone" class="collage-content-menu">
       <li tal:repeat="item view/getItems" class="visualIcon">
          <img tal:attributes="src string:${view/portal_url}/${item/icon};
