@@ -2,6 +2,11 @@ Changelog for Collage
 
     (name of developer listed in brackets)
 
+* Added a search text field in existing_items to find items in large sites.
+  Thanks to Silvio Tomatis for the patch.
+  This closes ticket http://plone.org/products/collage/issues/12.
+  [zegor]
+
 * Renamed manage_page to compose_page to avoid ZMI filtering access problem
   [zegor]
 
